# ChangeLog for media-libs/babl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/babl/ChangeLog,v 1.53 2013/09/09 18:06:21 jer Exp $

  09 Sep 2013; Jeroen Roovers <jer@gentoo.org> babl-0.1.10-r1.ebuild:
  Stable for HPPA (bug #481736).

  02 Aug 2013; Markus Meier <maekke@gentoo.org> babl-0.1.10-r1.ebuild:
  add ~arm, bug #473606

*babl-0.1.10-r1 (04 Jul 2013)

  04 Jul 2013; Pacho Ramos <pacho@gentoo.org> +babl-0.1.10-r1.ebuild:
  vala and introspection support is broken, bug #468208

  02 May 2013; Agostino Sarubbo <ago@gentoo.org> babl-0.1.10.ebuild:
  Revert for sping's request

  02 May 2013; Agostino Sarubbo <ago@gentoo.org> babl-0.1.10.ebuild:
  Stable for amd64, wrt bug #464572

  30 Apr 2013; Sebastian Pipping <sping@gentoo.org> babl-0.1.10.ebuild,
  babl-9999.ebuild:
  Migrate to vala eclass (bug #467394)

  30 Apr 2013; Sebastian Pipping <sping@gentoo.org> babl-0.1.8.ebuild:
  Apply g-ir crash patch to 0.1.8, too (bug #413663)

  29 Apr 2013; Sebastian Pipping <sping@gentoo.org> babl-0.1.10.ebuild,
  +files/babl-0.1.10-g-ir-compiler-crash.patch,
  +files/babl-0.1.10-introspection.patch:
  Fix build with USE=introspection (bug #413663), patches by upstream and
  openSUSE

  21 Feb 2013; Zac Medico <zmedico@gentoo.org> babl-0.1.10.ebuild:
  Add ~arm-linux keyword.

  17 Dec 2012; Sebastian Pipping <sping@gentoo.org> babl-0.1.10.ebuild,
  +files/babl-0.1.10-clang.patch:
  Add upstream patch for compilation with Clang (bug #435506)

  05 Nov 2012; Hanno Boeck <hanno@gentoo.org> metadata.xml:
  Maintained now by sping.

  30 May 2012; Alexis Ballier <aballier@gentoo.org> babl-0.1.10.ebuild:
  keyword ~amd64-fbsd

*babl-9999 (17 May 2012)

  17 May 2012; Sebastian Pipping <sping@gentoo.org> +babl-9999.ebuild:
  Adding live ebuild for and by xmw (bug #416337)

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> babl-0.1.4.ebuild,
  babl-0.1.4-r2.ebuild, babl-0.1.6.ebuild, babl-0.1.8.ebuild,