@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX babl-0.1.0-build-fixes.patch 551 SHA256 bae0afb4e8c1feb7a0bd566616e7b0a303583f8978b28dea84be9e354e9bf9e6 SHA512 53da84e6d44b85f0eede1a0dadec20cd8639219278042484a514678da6a9a0b6356fab71a44be248848cc692cf5151ce599bc8958d37d1568b73933f7209ad13 WHIRLPOOL 843a87e744588d37313e0887e3692f6deed4320c5715f1db2baf6cf9e053c3880f78bde5a2485a58c645927c8a48c5358b46b01853be4677a105f014c460f4b0
 AUX babl-0.1.10-clang.patch 1602 SHA256 c06a8f7daad0b918fedc6eda01e70f94cb376eaef2c557ca469776f18d43bb8f SHA512 892cceb179eb969809aa1f90e52adb786c999d9eb7659b172370e2385dfdb5446a37672c76abc431997507a7ece3575f46869b86ae229f8bee92c41c751751d1 WHIRLPOOL 58fa1028c89db265a76d560ca2a6985f7f6bcb6a18fe04e28bc71946ed6a4046cd0cc71a544b3aa36943873063c5ae5fa230cf425fd0d1c7a2894ec4fc16e577
@@ -11,19 +11,29 @@ DIST babl-0.1.10.tar.bz2 449537 SHA256 943fc36ceac7dd25bc928256bc7b535a42989c6b9
 DIST babl-0.1.4.tar.bz2 423645 SHA256 5b36312528de84815f054345cd478743a9493981a44060013b682d0304ffe733 SHA512 80ffc50f46c3664e3bd39e5ecc08f35454b8bf6140bd6a01b3ef13b89085e009e2fb50ef49e1e1a95a8c8203e494f10e7ea8414a901edfb20018545097e35e2e WHIRLPOOL a80686fca471fbe0fc24e52ff60d16c30f6bd31ed784f156165806bf6ef2b151b0e80d23f3a758b2a5da881ca350582f1eaa1ee4b059e8135fff8332bb200823
 DIST babl-0.1.6.tar.bz2 462712 SHA256 319b9004a5366101fd522da02cc983a5d0f50a17af0fa5cbce3535e31bce19a4 SHA512 c38549f27bba3df31fc79602e64aab5b4c7eea83d2f45baf06bdbf64e162384e666610ce4b74e67e26cad1b702972f7aed9460bdebd018ac0782cd8d7fdc98d7 WHIRLPOOL 3a0cf3ce8980c2f84a9aef8c8f6650ed6c174183a4ba00b1a034aad938d26454327991b818b83b3324f585897e52d327453a0a03440d35dbcbd87269e3b89370
 DIST babl-0.1.8.tar.bz2 471664 SHA256 dbef10866835c27e6dc623af1d5cd64b3f38dc06654e0641c87747458678341b SHA512 7d4989a37312e6627b4d8a858af0a81e13b483d6b8fe9ed8c07716ad20d3548de2c4a12da5aff878c50848637602547b81208e9e549bd8ebe59a2f5a5914dae5 WHIRLPOOL d6ae2cd11d0f7795769d29987823351c1b3227d697954e0f398f2c180bcef3af69cf5409ced2d3f72eefcaf79b9a92b9a31257d83b84201e847ec82c8bbc8895
-EBUILD babl-0.1.10-r1.ebuild 1886 SHA256 7e2231aa5d4d8dff7f04f9fb048610d26469c0bd252f0bb0ee8a888247d88054 SHA512 08d8344464574c89ac72970a62c7aa69b6092b02542fd3501067bb978689a15eea407aad622d33b9cf78ca6c3f8b34d19d5555df317438b50d88c1394230c512 WHIRLPOOL 7b8c05da7221693c84a91787c574ecfb04e819c7e1b32f61934feef6791d63c7314264331885e3d13e51d5a890b5f9216d373867bb7acbb2549f9ab27895cacf
+EBUILD babl-0.1.10-r1.ebuild 1885 SHA256 1866b2771bac6193b20ce1ea289bdfe4e6e2a6512b748aeefb9f10e994679246 SHA512 26372ac85bed3833f109d8ddc364e6a29d71c96587514731cf1d74d7531672cbaf432562157ab42227081523cde262bb9acab448f99fadd55cd5fc270de35908 WHIRLPOOL 1823166811ef3623e346cfcbb6ea545e0c9ee7c2d6fb9eec175316b0ccaf1f6d69dbe4a5747d073aa669ddc1d81f61854a22646cb12890f35b7fa2475b022a75
 EBUILD babl-0.1.10.ebuild 1766 SHA256 5344314fa44cf650b36d42677ed68b53d246dd1a4240a9ed148eca48736fb20c SHA512 b275cdb2565c5b161eff136e929a44ed00af0576b4481f2be90ace058425bb21cdf0724a3fb83b4235033dab788bd17cdbdb08c8d0765f05405c0fe0bac9b963 WHIRLPOOL d26facb542e9e71ce3c446f51bdde329d7d110298ab2614f3ec9f7cf0fc361990898e8c1fbff77475919f2d81bf4d0513ff29c3e4035b7da59599d393388199f
 EBUILD babl-0.1.4-r2.ebuild 1360 SHA256 abd23ce0166e9c697ed0892d3daae9d94ebfdbcfcc1004c1d4d79d6ef1435c4a SHA512 d93a8e5ee7bcf3306146f6da8d93b0d0ec39c144de75fb66c74254b03b0efb42aeb92f8b4338cc3eaae9ed88d063209d12da939446b8034a47fc950684c9e4c9 WHIRLPOOL bd6aff4c8d79005a73d845b34be037c03797b63daf0b68aaa78ef14a8f7aaf2a97115a82811fa5ba598119e75c6abc67178406c29c30675750b999b239d9ba52
 EBUILD babl-0.1.4.ebuild 1245 SHA256 2ff35e333687024f7f082a20e3a8e27d84658760402031b4024d489abbaa112b SHA512 3304e2cbfb74386835b971ed50cb84259023b8509073bf41140c45da2e6debcc902ebd2afd1ef98552652e42782228cbb8bcb2b6e9cf5aa0218145f4257a0084 WHIRLPOOL 85aa66a83d0692a33f14b4a130ec01dbae86bf858d614dc6a06d7114b4f8d61d4be3859ec32f1f2ec4daaf286691a5337aeff13c66b509c0fa290dc4f724c066
 EBUILD babl-0.1.6.ebuild 1522 SHA256 005da2e2438fb4d5ff9b892b32106c11c685bcc3bacf79ba097c7167bdf48b73 SHA512 a76ef7019326fc3948dac3db70751286a2b2aa19afcc8a2f2f8c34deb9cd1e63e8b7de0dad8d667ada21aaf0728911901213983eeefca4c502fcd23a784365c7 WHIRLPOOL daaecd2339ae2e38a83e63d5ae426df2bcdc093b902c96375b9e3c617b94bee27ea6b4d4b9fc247ff99af99bfb049a6956ceb821b822f0d96bac080acebaa68a
 EBUILD babl-0.1.8.ebuild 1589 SHA256 ae92ba40c5b1a9e742b872dc989c41bfb37dfddf3b3f1e945bef243ff9dc52ba SHA512 c3b0d681f16b7eaf9473d9a67fde2e6d3557b2ad46633e7fac48369b5bcb449d570438aa0e0b44758937fbe93bba0c273e2dea96d80ef062116d775f06cbe1e1 WHIRLPOOL b61a96e0615700a356a5303580d9618cb21320a74922d09ac3f304bdc659300e4d10b6be0d0908324cc0cc7b0e404631a21b68f3a623c12cc9cfa3c69ac8fe31
 EBUILD babl-9999.ebuild 1455 SHA256 7b8b0b29ab96c0395c1902c7fae9755921e7daf304a50f1d3887edc68a0f9233 SHA512 f2f16af9e5852707fc1ba22e7dce226e240e29942d777b7b43a8517f6833bcd954de8aaac13fdcb1e5a3033e2b7ee3dfe3fb1cdf245c5cf9c56864a05ec2b455 WHIRLPOOL c999b43d7b9ec9efd9629a5c632cdd0cf552d0a21925c2c39e84b31c75ff822cb2f20c430f7d2f9a35f9586d6a166160960ad618e0ccb025bf8f1981cfda0f4e
-MISC ChangeLog 6642 SHA256 ba9cfd9fa822b7f20670de976c79d0ab23ba55db2c410eb39f048ab0a395c1d9 SHA512 7a561684e6da22a0afda8aa8ea0a8f0979c2be034d9eea78d3feaa46054b8b94e46e1b904a807a9b100c4a5406d2e3001e2294353a5ab2b3a58101c98f0a6981 WHIRLPOOL eb8ace4ec8dbf46594c830c0da01dea61ebf1d6d1be0d7638d25596af39f849883a2487841bc04d6eca580f89fb9e04fcc37d4bf4b0d8b16ac357c088e96219d
+MISC ChangeLog 6751 SHA256 367849de18162232add92912114bd9914bee2b56d20bcb52941a7c33dbcf4f36 SHA512 dfbbb8e5de58b98250fd53f5b923955671385142017603b7f5222262aed6300ea9795ba58d111d8e4492b6e90832acfb75b61653792b3714060da92676a6eb2a WHIRLPOOL 13b5bfefa01f8ff7a4e9ba151b72e5152b189a55834db9769df67d1b2e3e8b2e72a706ace22c0e2cb143d3b593a4fe8368b0777a910832bdbc684e6069f4a24d
 MISC metadata.xml 391 SHA256 3df30b3fc9c861ed6cf986f63b269dd11c63713ff36b234af2c31adfb78760f1 SHA512 38ad0ecbdce22d342844dc0ae2772935cf5d3cfd1dc1281aa69f6ccc640b58005af3f41f33687a30d2d86fa1722a5afdb79add27cfb46f4cd9c9e9485eff9dd1 WHIRLPOOL 843c6f2c2797b04471132fd3981b1f66cd59a0f206169a833af8965f8f1bf7f9412009f583e74d8edacda4c294d33b5560bba846e9a4fcc546dd10f710713db1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIuDh8ACgkQVWmRsqeSphP+xgCffF/rgWwLGFToi2iMBErgHg70
-/agAnjSqdXnKTkuycZTNf4/0Ce02cGFI
-=rHtS
+iQIcBAEBCgAGBQJSNBqaAAoJELp701BxlEWfXhoP/05a+aKYeQCk+6SZOuUGaGl5
+pOK56INumjFxDuqhzTShsHQIdpGNyiAlmYchB2g1EcxcdeTa9pusMcDAKFueX0tA
+8z5yHzfEqSG2g43fZDlxkD5a6HwlGA6jhygj+nXBzdlm10vsm6GnY0lfpIp2g3sS
+5ux6O1ydOgx6i2RG2mUMG7CsL3KB8L+SlqZsjiWSo2R9/uebGJawD6qCVi7g93yx
+o6T1nJNbOH++Gqh0M+6uxixYJ1kqUrBjiCwmJzXmeMy3HMFy/vfAC94rHLPwpyxG
+FthC5ytKLeKoRTcpfSDhqzLOqlqtQUnynOboaEcBR3ycDzFrSp4m6Vh9SaULCNJJ
+KEUGHIeZYM9c0v2SkTldwIcNkILzCDPezu0hkadWWZkAI0BM6SDHaFLHAOIXYSpC
+C3qaVIuXFCZbEuu+LZsYUXGJlhtCY8GS4UFKpB0GcrHJ3NpAzb36ROTrj7RVWx/p
+HqC0l78LCPzEQpf6vcxCZAodD8DD/yiWTFkPtM9pSjJgGR6h/ERaFS424UDUMmCK
+mODwXcbg6l4q6RRfYBrQ1uxAKtsKjJj8VQ5lZsXk3wYJ37qwPIWBqjoKDjxHEtE+
+3O51ILn/FJByU2tt6BW9BSqphRNtl+ANVhEZ+59288zHHwwyZC3HaHX3XLYT4FVS
+15KIZXe6Ms04dWEmGFXU
+=Cvp/
 -----END PGP SIGNATURE-----
