@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 0.1.6-ffmpeg.patch 1288 SHA256 1de42f9403602c6c96bcaefb4140221607f8e3e98f2c856e208357c1722a94d2 SHA512 7df01359c7bea588b01ede213a34950e6208a5c17b3224ea7a0c300fb522797e96a1400c31a237c9438c8adf0da9ea2f531c0bc74592d4315743c2f6e23921d8 WHIRLPOOL d305576300f9969af2095bf403ed5b00c0f59433b5ef7a972f465dc3a9fd90aebd15ce0246d6cd65a4f19d3dbbdadd6e7eba37cb286ca7303e539fe66500447b
 AUX gegl-0.0.22-locale_h.diff 282 SHA256 7cbd5937ceb20dacd5abd9bf0180422d95ae85bd79e71b6d639d4d5d7f6fa28d SHA512 cde065207208f99f4d16662c6cbddf6f5046ef722f05fa147e0648a56a3c963dcfeac2ced317e08d7ee5994727355f2ffb1766a35fc20b08b3a5d6e3743330c9 WHIRLPOOL c0ff6d406097a5693a0c004edd599888c010064b28c3ce4fb8afc6971b30f096a39f749171c3fbf7ec1b7edcbcbb3a5cb74586b2e7a826429a8a98c473c529c9
@@ -18,14 +18,24 @@ EBUILD gegl-0.1.6-r1.ebuild 2957 SHA256 0e86587d32b6387a9786db121602d5753a8f6e7c
 EBUILD gegl-0.1.6.ebuild 2743 SHA256 6829f93779057e10caf9a985556190e72ff64371511f952971f28c421dfa6884 SHA512 a5ee9f166ed68698c55e1a1da561536705c9c8282dcb949694eeae751dd31748972b943c2f4cab38ffde9caad12eeb60e45639e0cabffaa594e6006a87bfb3f0 WHIRLPOOL e6dbf18465bf4112dde66c20c4e87fe47634d119cc787db48390f2e6324fd76e93c3a1f6372c0ad4b7b3fd89d868ec3c5a04efb84c45f2782f782d5e79210445
 EBUILD gegl-0.1.8-r1.ebuild 3413 SHA256 c3a016c6ca5d9e889e68552c6af85b34718dbce5825949c8d4b1334aa0b3e759 SHA512 c6d7b97ec39b7fca698a5b2e2ffa4da2690a2b45630746920102e4e0e5f99ca43abb76cbb6b68786990be448bd0faf8ae984112aa881da6b2bad7316280f3346 WHIRLPOOL 01c3f567c5171dbe21eee204c587a588ee63c7cf848362d95a2c05edb4334de19fd8a80450369e16fb58d120e590bb4d574a5f83572fe3e1a6d5e8a7839ea743
 EBUILD gegl-0.2.0-r1.ebuild 4410 SHA256 2156aa45497cb1af7dcd9c5f07ca3e27622d29340018e477399722ab9bcf1ccc SHA512 c8de5c0d9e8a6726c6ec440007c05498c0234d37b0aac58e6ec6dcd81329e62cab74fec6faf61d8a2d7a2b88252e5346ce503ac5966ee70e17969b5b47c6c1ba WHIRLPOOL d060d5652c3a937d944a3ce741dccb3756d3e28f418696665b30a9383fff9fe0503df8294daba1d71ffce2ebb1467ec7db20aa8147832e54ec40cda3cce187e5
-EBUILD gegl-0.2.0-r2.ebuild 4556 SHA256 38ae2a0b2c9b52602782f2b3e2d901b8f84360536bab76cfee08ecfc464138d4 SHA512 c224c62c6095dcebb1e1a0c4f21344e932f5a2d234dff7f036d908a8f64dc0a06764af45a174eabc9f85275df9a6bcf9a7205445215c1cd5c1795292b20b4e7b WHIRLPOOL f2698e4e09966448cf9a87e0996129e8f4acb463368ace7751b4cc2cfa86956d57e08b4855512aab7be9b343d862d4548f5a98d04cdfc6d08a8cc13081803232
+EBUILD gegl-0.2.0-r2.ebuild 4555 SHA256 42acc6ac070c64a999847c2375a4ac7674efad93e0f94118b7712664ac715570 SHA512 8c4c48b78a3e6343db98db05123fb3f78057bc651e6a3474814e98072af44365219ddda26f8cbae10f24bb4165582d45cd5a048941e3157133bdd626df4020c7 WHIRLPOOL 82b78beffc7974add499586115e204fb549969e25256299ade12eaa2ddb3b12a0cdc5a2bcf8b245f95c715e63ebff80fae0472724e20a72062e2895879c4f0f8
 EBUILD gegl-9999.ebuild 3764 SHA256 9924ae618a8d35b3d3c968ad9927e27afc826b142e0db9fd53a8c27209e19a16 SHA512 00e4aeb9b49aa573bcabc6e7ab953bcdd993a9b65c9eedc56d2731853d0d7d02fd3d17ea7f69d07fdf2713309a5f50560612177f46a26b70eda9bdc45c92eb41 WHIRLPOOL cd93dc7d24e05696e3d6568f4af0dc195ed46d4d152ded5db657f2e3d7fe6ac6c15ed09f9ca7c07d3e3b7da291b43263c2d3d350846b400d2c4e6e215ccdc20a
-MISC ChangeLog 13176 SHA256 598dc1911e2eb7bd46ea9531191af14e5e47136f898ba1a31d34a73147ea7867 SHA512 9f145f91d214449e3efffc96b80338e21880a9e7b48d3eac80232bbbcd3e496b46cadd00f9718d37818a959bf3b4199039b5026e6e9419e63dd897430e9fc5ec WHIRLPOOL 88ba517444476bf929c16644f4d194496efb3827b4a71fb6964e7c5440a9cd9edba426b7af9d3884a7811626a95d4d10ffaf9e4bd1dbc2afc06afbf112ef3a8f
+MISC ChangeLog 13284 SHA256 9e68b051c86420822437bc28d237d5ef034b680ecd86f670fef38d1d781f5287 SHA512 ab4b21b2f86c5232de09eecfe66a1b648aaeff53ff985799f9e91eadeaf9c6f91c40144510b3f37f14d692240782882deb6de8ba05f54e9ac08f6786ce18605e WHIRLPOOL 717c8aecd2fc1e853309ab7680d87a57888da5cb698d58c607b7219cf2058786f02e516c4776711cffdfe2e8d4bb6889c7922755035e27269bc7952a3911c0cf
 MISC metadata.xml 546 SHA256 76148af87ef72e06a1daae6476a80a97058f4f9e5d115c0603e156aeb3fd492d SHA512 0aab6757fb995142f0407c2b9aa35fdd7d18566541ca2dd06134451482287d0fb9b3fabf3b744644edba43d7d5b5838558c622792c041144d1b160f44cf48fb4 WHIRLPOOL a073c9fe5d73789ed6ba380b1c0337948300765d1e509f0097be34f1bdbbdebf8863608dbdfa63b0430695d9f22ae0c3b2a2513cba1520a6fc4178419854bee5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIuDjwACgkQVWmRsqeSphO0wwCbBrqSLfvmAnv4ylMlKnHGp+Nb
-9TEAniCOpUrcQrHMVnf4114h+9b5Pzaw
-=VOyE
+iQIcBAEBCgAGBQJSNBqWAAoJELp701BxlEWfb/YP/jdrqLqb4HCuShLpSEHIkzMr
+7ljD8r6rq7kZhj1Nl2p//26duB3zDJbay9dnSItMjbOeevaS71Ms2xTaHsv/uFMJ
+K7KO6iKIgIKe1F59wlrMJtqKfoxBO3SXV5e/5DEtVqNo1oTcSwS/eIC2ESY4Ow8T
+3NeJtE+gDGPzGklvdbbgU/C8r7IKGjZnJRcjUksJpl02IJZV2RU3kdd9crll00tI
+lEC+ixS+qMfrgyZuZUMqRZHz8+m9+ANaLbmreB3qZUT/w8xmhjsKiFcA7fk4enIC
+EOMGv02cnS4LLCJybTDv4EqQm6W0SCXwhMh9ehV+hsnXHpHwKB9Avm5gQxp7ohsY
+FhX+e/mBLijVIcmG81PTzBo28d51UkgdjQaOzoctRITcm76jJfBYskGGfZfqYGY2
+WvlPymS/PYoh/sDy3+SqWzaNO/ahHPTMez1lF/oypPI+9oYlso3UVjOCiinVCjh8
+MDqD325VqC881uyiS2AJAHogh8TAxdxfwBPo2BnLG/MV6QsR5qpC3dFaM5yR2RmT
+Tbdfvex81BiTMiGucoixOnwwicwO75uOS+HljDS8227pakBKAX5m/olL6w1xbk9c
+XK7TULUexRybOau8jHZj3lEkJPiXhfPJyLHpuGGGhQksuQoaKrBADyz29tmJ+BTF
+WaTku9e1H8IzKiEfsC87
+=EICF
 -----END PGP SIGNATURE-----
