@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gegl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.94 2013/09/09 18:06:51 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.95 2013/09/14 08:13:16 ago Exp $
+
+  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
+  Stable for amd64, wrt bug #481736
 
   09 Sep 2013; Jeroen Roovers <jer@gentoo.org> gegl-0.2.0-r2.ebuild:
   Stable for HPPA (bug #481736).
