@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/babl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/babl/ChangeLog,v 1.53 2013/09/09 18:06:21 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/babl/ChangeLog,v 1.54 2013/09/14 08:13:21 ago Exp $
+
+  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> babl-0.1.10-r1.ebuild:
+  Stable for amd64, wrt bug #481736
 
   09 Sep 2013; Jeroen Roovers <jer@gentoo.org> babl-0.1.10-r1.ebuild:
   Stable for HPPA (bug #481736).
